Merged changes in kernel-impl merged from core from revision 40900 to 49065
git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@49370 66ffb92e-73f9-0310-93c1-f5514f145a0a