@@ -104,7 +104,7 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 	{
 		try
 		{
-			m_checkDb = new Boolean(value).booleanValue();
+			m_checkDb = Boolean.valueOf(value).booleanValue();
 		}
 		catch (Exception any)
 		{
@@ -124,7 +124,7 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 	{
 		try
 		{
-			m_batchWrite = new Boolean(value).booleanValue();
+			m_batchWrite = Boolean.valueOf(value).booleanValue();
 		}
 		catch (Exception any)
 		{
@@ -142,7 +142,7 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 	 */
 	public void setAutoDdl(String value)
 	{
-		m_autoDdl = new Boolean(value).booleanValue();
+		m_autoDdl = Boolean.valueOf(value).booleanValue();
 	}
 
 	/** How long to wait between checks for new events from the db. */
@@ -289,7 +289,7 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 		String statement = insertStatement();
 
 		// collect the fields
-		Object fields[] = new Object[5];
+		Object fields[] = new Object[6];
 		bindValues(event, fields);
 
 		// process the insert
@@ -325,7 +325,7 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 
 			// common preparation for each insert
 			String statement = insertStatement();
-			Object fields[] = new Object[5];
+			Object fields[] = new Object[6];
 
 			// write all events
 			for (Iterator i = events.iterator(); i.hasNext();)
@@ -413,9 +413,12 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 
 		fields[0] = ((BaseEvent) event).m_time;
 		fields[1] = event.getEvent();
-		fields[2] = event.getResource();
+		fields[2] = event.getResource() != null && event.getResource().length() > 255 ? 
+				event.getResource().substring(0, 255) : event.getResource();
 		fields[3] = reportId;
 		fields[4] = (event.getModify() ? "m" : "a");
+		fields[5] = event.getContext() != null && event.getContext().length() > 255 ? 
+				event.getContext().substring(0, 255) : event.getContext();
 	}
 
 	/*************************************************************************************************************************************************
@@ -504,7 +507,7 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 
 				// send in the last seq number parameter
 				Object[] fields = new Object[1];
-				fields[0] = new Long(m_lastEventSeq);
+				fields[0] = Long.valueOf(m_lastEventSeq);
 
 				List events = sqlService().dbRead(statement, fields, new SqlReader()
 				{
@@ -519,7 +522,8 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 							String ref = result.getString(4);
 							String session = result.getString(5);
 							String code = result.getString(6);
-							String eventSessionServerId = result.getString(7);
+							String context = result.getString(7);
+							String eventSessionServerId = result.getString(8);
 
 							// for each one (really, for the last one), update the last event seen seq number
 							if (id > m_lastEventSeq)
@@ -554,7 +558,7 @@ public abstract class ClusterEventTracking extends BaseEventTrackingService impl
 
 							// Note: events from outside the server don't need notification info, since notification is processed only on internal
 							// events -ggolden
-							BaseEvent event = new BaseEvent(id, function, ref, code.equals("m"), NotificationService.NOTI_NONE);
+							BaseEvent event = new BaseEvent(id, function, ref, context, "m".equals(code), NotificationService.NOTI_NONE);
 							if (nonSessionEvent)
 							{
 								event.setUserId(userId);
